Improved Tree detections